# POS

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json  update.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.production.json  update-key.key  update-key.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  printer.rs
src/app/: App.tsx
src/components/: AppShell.tsx  Button.tsx  Card.tsx  DataTable.tsx  Dropdown.tsx  Modal.tsx  NumberInput.tsx  ReceiptPreview.tsx  StatCard.tsx  Toast.tsx  ToastProvider.tsx
src/data/: mockData.ts
src/pages/: CategoriesPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProductsPage.tsx  ReportsPage.tsx  SalesPage.tsx  SettingsPage.tsx  SetupPage.tsx  StockPage.tsx  TransactionsPage.tsx  UnitsPage.tsx  UsersPage.tsx
src/services/: posApi.ts
src/styles/: globals.css
src/types/: pos.ts
src/utils/: format.ts  productImage.ts
